Fix edited date

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <main>
             <div class="code-of-conduct">
                 <h1>The Debuggy Code of Conduct</h1>
-                <p class="updated-date">Edited: DD/MM/YYYY</p>
+                <p class="updated-date">Edited: 2/10/2022</p>
 
                 <h2>Opening</h2>
                 <p>Participating in Debuggy community spaces requires you to follow the Code of Conduct as outlined below. 
